--- a/.minttyrc
+++ b/.minttyrc
@@ -1,21 +1,18 @@
-BoldAsFont=no
-Font=VL ゴシック
-FontHeight=14
-Locale=ja_JP
-Charset=UTF-8
-Transparency=high
-OpaqueWhenFocused=no
-CursorBlinks=yes
-RightClickAction=paste
-ForegroundColour=192,192,192
-BackgroundColour=0,0,0
-CursorColour=255,255,0
-CursorType=block
-Language=@
-Term=xterm-256color
 BellFile=percussive-synthkick-lo
 BellFlash=yes
-FontWeight=400
-FontIsBold=no
-ThemeFile=dracula
+BoldAsFont=no
+Charset=UTF-8
+CursorBlinks=yes
+CursorColour=255,255,0
+CursorType=block
+Font=VL ゴシック
+FontHeight=14
+FontSmoothing=full
+Language=@
+Locale=ja_JP
+OpaqueWhenFocused=no
+RightClickAction=paste
 ScrollbackLines=100000
+Term=xterm-256color
+ThemeFile=dracula
+Transparency=high
