--- a/.minttyrc
+++ b/.minttyrc
@@ -3,16 +3,19 @@ BellFlash=yes
 BoldAsFont=no
 Charset=UTF-8
 CursorBlinks=yes
+ForegroundColour=192,192,192
+BackgroundColour=0,0,0
 CursorColour=255,255,0
 CursorType=block
 Font=VL ゴシック
 FontHeight=14
-FontSmoothing=full
 Language=@
 Locale=ja_JP
 OpaqueWhenFocused=no
 RightClickAction=paste
 ScrollbackLines=100000
 Term=xterm-256color
+FontWeight=400
+FontIsBold=no
 ThemeFile=dracula
 Transparency=high
